--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-    <title>React Movie App</title>
+    <title>Movie4You</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
